--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,9 +5,16 @@
   "likes": "Likes",
   "authWithEmail": "Auth with Email",
   "dontHaveAnAccountYet": "Don't have an account yet?",
-  "register": "register",
+  "register": "Register",
   "auth": "Auth",
   "enterEmail": "Enter Email",
   "pleaseEnterEmail": "Please enter email",
-  "uncorrectEmail": "Uncorrect email"
+  "uncorrectEmail": "Uncorrect email",
+  "enterNickname": "Enter nickname",
+  "pleaseEnterNickname": "Please enter nickname",
+  "enterPassword": "Enter password",
+  "repeatPassword": "Repeat password",
+  "pleaseEnterPassword": "Please enter password",
+  "passwordMismatch": "Password mismatch",
+  "login": "Login"
 }
