add login to account with firebase

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,5 +17,6 @@
   "pleaseEnterPassword": "Please enter password",
   "passwordMismatch": "Password mismatch",
   "login": "Login",
-  "registrationWasNotSuccessful": "registration was not successful"
+  "registrationWasNotSuccessful": "registration was not successful",
+  "passwordMustContain6OrMoreCharacters": "Password must contain 6 or more characters"
 }
