added picking video from camera and gallery

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -18,5 +18,8 @@
   "passwordMismatch": "Password mismatch",
   "login": "Login",
   "registrationWasNotSuccessful": "registration was not successful",
-  "passwordMustContain6OrMoreCharacters": "Password must contain 6 or more characters"
+  "passwordMustContain6OrMoreCharacters": "Password must contain 6 or more characters",
+  "uploadVideo": "Upload video",
+  "home": "Home",
+  "profile": "Profile"
 }
